2009-02-23 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_track.c
	  src/display_sorttabs.c: use g_list_prepend() instead of
	  g_list_append() where appropriate. Thanks to Javier Kohen
	  for the patch.

2009-02-23 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc.h
	  src/details.c
	  src/misc.c: replace glist_duplicate by g_list_copy. Thanks
	  to Javier Kohen for the patch.

2009-01-31  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in: Bump libgpod requirement to >= 0.7.0

2009-01-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c (mp3_read_lame_tag): fix endianess problems on
	  little endian machines. Fixes "iPod doesn't play gapless"
	  issue. Thanks for Todd for localizing the problem.

2009-01-27 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* scripts/convert-2mp3.sh: fix bug when setting genre for
	  non-standard genres.

2009-01-18  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* configure.in: Bump version to 0.99.15SVN for further development

	* configure.in: Bump version for 0.99.14 release

	* NEWS: Update for 0.99.14 release

	* src/file_itunesdb.c: Quiet iTunesDB.ext warning

2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file_convert.c (conversion_log_set_status): don't change tab
	  label text in conversion log window unless actually
	  necessary. Fixes the "disappearing tooltips" problem (tracker
	  #1906016).

2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/rb_rating_helper.c: display a warning if one of the star
	  icons cannot be loaded.

2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_tracks.c: let gtkpod remember column sizes again.

	* src/prefs.c: enable horizontal scrollbar in the track view by
	  default.

2009-01-14  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* po/zh_CN.po: Update simple Chinese translation (Tan Zhixin)

2008-01-14 Jorg Schuler <jcsjcs at users.sourceforge.net>
